--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
     <div>
       <form action="/register" method="POST">
         <div>
-            <label>Email（學號@fju.edu.tw）:</label><br>
+            <label>Email（學號@m365.fju.edu.tw）:</label><br>
             <input type="text" name="account" pattern="\d{9}@fju\.edu\.tw" required><br>
         </div>
         <div>
