--- a/SA整合/app/templates/main.html
+++ b/SA整合/app/templates/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>課業問題查詢</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='announce.css') }}" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
@@ -117,6 +118,8 @@
         </div> 
         
         <script src="{{ url_for('static', filename='announce.js') }}"></script>
+        <script src="{{ url_for('static', filename='base.js') }}"></script>
+
       </body>
       
     
