--- a/SA整合/app/templates/faq_question.html
+++ b/SA整合/app/templates/faq_question.html
@@ -23,7 +23,7 @@
                         </a>
                     </div>
                     <div class="question-text mt-2">
-                        <p class="mb-2 fs-5 text-secondary"><i class="bi bi-chat-left-text me-2 text-primary"></i>{{ question.unanswer_question }}</p>
+                        <p class="mb-2 fs-5 text-secondary"><i class="bi bi-chat-left-text me-2 text-primary"></i>{{ question.unanswer_q }}</p>
                         <small class="text-muted"><i class="bi bi-clock me-1"></i>詢問時間：{{ question.created_at }}</small>
                     </div>
                 </div>
